--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "keywords": [],
   "main": "src/index.js",
+  "homepage": "http://prabhatkadam18.github.io/Keeper",
   "dependencies": {
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-scripts": "3.2.0"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "typescript": "3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
